2011-02-23  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-11.patch: New file. Replace ...
	* binutils-lto-mixed-10.patch: This. Removed.
	* README: Likewise.

2011-02-16  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-10.patch: New file. Replace ...
	* binutils-lto-mixed-9.patch: This. Removed.
	* README: Likewise.

2011-01-22  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-9.patch: New file. Replace ...
	* binutils-lto-mixed-8.patch: This. Removed.
	* README: Likewise.

2011-01-16  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-signed-6.patch: New file. Replace ...
	* binutils-signed-5.patch: This.  Removed.
	* README: Likewise.

2011-01-14  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-8.patch: New file. Replace ...
	* binutils-lto-mixed-7.patch: This. Removed.
	* README: Likewise.

2011-01-13  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr12356-1.patch: Removed.
	* README: Likewise.

2011-01-12  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-7.patch: New file. Replace ...
	* binutils-lto-mixed-6.patch: This. Removed.
	* README: Likewise.

2011-01-12  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr12380-1.patch: Removed.
	* README: Likewise.

2011-01-12  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-6.patch: New file. Replace ...
	* binutils-lto-mixed-5.patch: This. Removed.
	* README: Likewise.

2011-01-10  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-5.patch: New file. Replace ...
	* binutils-lto-mixed-4.patch: This. Removed.
	* README: Likewise.

2011-01-10  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr12380-1.patch: New.
	* README: Apply it.

2011-01-08  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-shr-96.patch: New file. Replace ...
	* binutils-shr-95.patch: This. Removed.
	* README: Likewise.

2011-01-05  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-4.patch: New file. Replace ...
	* binutils-lto-mixed-3.patch: This. Removed.
	* README: Likewise.

2011-01-05  H.J. Lu  <hjl.tools@gmail.com>
