@@ -122,10 +122,10 @@ index c54b7d3..a48c502 100644
 -[0-9a-f]+[ 	]+R_X86_64_PLT32[ 	]+xtrn\+0xf+c[ 	]*
 +[0-9a-f]+[ 	]+R_X86_64_PLT32[ 	]+xtrn-0x0*4[ 	]*
 diff --git a/gas/testsuite/gas/i386/ilp32/reloc64.d b/gas/testsuite/gas/i386/ilp32/reloc64.d
-index e9e1b4d..26b4a21 100644
+index 08c15e4..af75c51 100644
 --- a/gas/testsuite/gas/i386/ilp32/reloc64.d
 +++ b/gas/testsuite/gas/i386/ilp32/reloc64.d
-@@ -14,31 +14,31 @@ Disassembly of section \.text:
+@@ -14,10 +14,10 @@ Disassembly of section \.text:
  .*[ 	]+R_X86_64_PC32[ 	]+xtrn\+0x0*2
  .*[ 	]+R_X86_64_PC16[ 	]+xtrn\+0x0*2
  .*[ 	]+R_X86_64_PC8[ 	]+xtrn\+0x0*1
@@ -139,6 +139,9 @@ index e9e1b4d..26b4a21 100644
 +.*[ 	]+R_X86_64_PC8[ 	]+xtrn-0x0*1
  .*[ 	]+R_X86_64_GOT32[ 	]+xtrn
  .*[ 	]+R_X86_64_GOT32[ 	]+xtrn
+ .*[ 	]+R_X86_64_GOT32[ 	]+xtrn
+@@ -26,31 +26,31 @@ Disassembly of section \.text:
+ .*[ 	]+R_X86_64_GOTPCREL[ 	]+xtrn
  .*[ 	]+R_X86_64_GOTPCREL[ 	]+xtrn
  .*[ 	]+R_X86_64_GOTPCREL[ 	]+xtrn
 -.*[ 	]+R_X86_64_GOTPCREL[ 	]+xtrn\+0xf+c
@@ -151,23 +154,31 @@ index e9e1b4d..26b4a21 100644
  .*[ 	]+R_X86_64_GOTPC32[ 	]+_GLOBAL_OFFSET_TABLE_\+0x0*2
  .*[ 	]+R_X86_64_PLT32[ 	]+xtrn
  .*[ 	]+R_X86_64_PLT32[ 	]+xtrn
+ .*[ 	]+R_X86_64_PLT32[ 	]+xtrn
+ .*[ 	]+R_X86_64_PLT32[ 	]+xtrn
 -.*[ 	]+R_X86_64_PLT32[ 	]+xtrn\+0xf+c
 +.*[ 	]+R_X86_64_PLT32[ 	]+xtrn-0x0*4
+ .*[ 	]+R_X86_64_TLSGD[ 	]+xtrn
+ .*[ 	]+R_X86_64_TLSGD[ 	]+xtrn
  .*[ 	]+R_X86_64_TLSGD[ 	]+xtrn
  .*[ 	]+R_X86_64_TLSGD[ 	]+xtrn
 -.*[ 	]+R_X86_64_TLSGD[ 	]+xtrn\+0xf+c
 +.*[ 	]+R_X86_64_TLSGD[ 	]+xtrn-0x0*4
  .*[ 	]+R_X86_64_GOTTPOFF[ 	]+xtrn
  .*[ 	]+R_X86_64_GOTTPOFF[ 	]+xtrn
+ .*[ 	]+R_X86_64_GOTTPOFF[ 	]+xtrn
+ .*[ 	]+R_X86_64_GOTTPOFF[ 	]+xtrn
 -.*[ 	]+R_X86_64_GOTTPOFF[ 	]+xtrn\+0xf+c
 +.*[ 	]+R_X86_64_GOTTPOFF[ 	]+xtrn-0x0*4
+ .*[ 	]+R_X86_64_TLSLD[ 	]+xtrn
+ .*[ 	]+R_X86_64_TLSLD[ 	]+xtrn
  .*[ 	]+R_X86_64_TLSLD[ 	]+xtrn
  .*[ 	]+R_X86_64_TLSLD[ 	]+xtrn
 -.*[ 	]+R_X86_64_TLSLD[ 	]+xtrn\+0xf+c
 +.*[ 	]+R_X86_64_TLSLD[ 	]+xtrn-0x0*4
  .*[ 	]+R_X86_64_DTPOFF32[ 	]+xtrn
  .*[ 	]+R_X86_64_DTPOFF32[ 	]+xtrn
- .*[ 	]+R_X86_64_TPOFF32[ 	]+xtrn
+ .*[ 	]+R_X86_64_DTPOFF32[ 	]+xtrn
 diff --git a/gas/testsuite/gas/i386/mixed-mode-reloc64.d b/gas/testsuite/gas/i386/mixed-mode-reloc64.d
 index dc50e43..9b82cb5 100644
 --- a/gas/testsuite/gas/i386/mixed-mode-reloc64.d
